infra/k8s-local/configs/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tcp-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    # REACTS APPS
    - host: admin.booker.dev
      http:
        paths:
          # ADMIN BACKENDS
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3000
          # ADMIN UI
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: ui-admin-srv
                port:
                  number: 3000
